fix minor alignment issues and dialog consistency

--- a/src/app/routes/ewt-patron/ewt-patron/ewt-patron.component.scss
+++ b/src/app/routes/ewt-patron/ewt-patron/ewt-patron.component.scss
@@ -60,6 +60,10 @@ p {
 a {
     color: #A566FF;
     letter-spacing: 1.25px;
+
+    &:hover {
+        opacity: 0.7;
+    }
 }
 
 ::ng-deep {
